--- a/Final Project.Rmd
+++ b/Final Project.Rmd
@@ -4,7 +4,7 @@ author: "Assaf Yancu"
 date: "`r format(Sys.time(), '%d %B %Y')`"
 output:
   html_document:
-    code_folding: show
+    code_folding: hide
     theme: flatly
     highlight: haddock 
     toc: yes
